2008-04-27  Dennis Friis  <peavey@placid.dk>

	* src/gui/scrollarea.h, src/gui/scrollarea.cpp: Add methods to get
	width and height adjusted for any visible scrollbars.
	* src/gui/itemcontainer.cpp: Fix buildup of whitespace by using
	correct gridHeight and adding just 4px space to bottom.

2008-04-27  Dennis Friis  <peavey@placid.dk>

	* src/gui/inventorywindow.cpp: Fix ItemContainer not being resized
	properly when resizing inventory window.

2008-04-26  Dennis Friis  <peavey@placid.dk>

	* src/inventory.cpp: Avoid stacking equipment other than arrows. Based on
	similar fix in inventoryhandler.
	* src/gui/trade.cpp: Text fix, z => GP.
	* src/net/playerhandler.cpp: When picking up GP from trade or quest,
	tell the user in the chat window like with items.

2008-04-24  Dennis Friis  <peavey@placid.dk>

	* src/itemshortcut.h, src/gui/itemshortcutcontainer.cpp,
	src/gui/itemcontainer.cpp, src/net/inventoryhandler.cpp,
	src/itemshortcut.cpp: Make shortcut container ID based instead of slot
	based. Fixes items shifting around often causing equipment to be lost.
	* data/help/commands.txt: Document anti-trade function.

2008-04-22  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/beingmanager.cpp: Fixed a bug, thanks GCC 4.3!

2008-04-18  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/openglgraphics.cpp: Mac now uses Apple key for
	emoticons, so alt can be used for alternate characters. Disable vsync
	on mac.

2008-04-17  Dennis Friis  <peavey@placid.dk>

	* src/gui/sell.cpp: Fix shop list not to scroll to top when selling.
	Redo of revision 3801 due to changes in guichan 0.8.0.
	* src/gui/minimap.cpp: Draw NPCs in yellow on minimap and skip drawing
	of warps. Based on idea by leeor_net.

2008-04-16  Dennis Friis  <peavey@placid.dk>

	* src/gui/browserbox.cpp: Fix a basic_string::at sometimes being out
	of range in BrowserBox::draw when checking for line separators and
	color codes.
	* src/localplayer.cpp: Cancel walking to a clicked monster if the