@@ -4,6 +4,9 @@
 	width and height adjusted for any visible scrollbars.
 	* src/gui/itemcontainer.cpp: Fix buildup of whitespace by using
 	correct gridHeight and adding just 4px space to bottom.
+	* src/gui/inventorywindow.h, src/gui/inventorywindow.cpp: Switch to
+	use our extended ScrollArea and use adjusted width to proper calculate
+	the grid for itemcontainer.
 
 2008-04-27  Dennis Friis  <peavey@placid.dk>
 
